<resources>
    <string name="app_name">Store Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">LogOut</string>
    <string name="action_reset_account">Reset Account</string>

    <string name="menu_home">Produits</string>
    <string name="PRODUCTS_ACTION_BAR_TITLE">Produits</string>
    <string name="FOURNISSEURS_ACTION_BAR_TITLE">Fournisseurs</string>
    <string name="QUERY_HINT_MSG">Recherche…</string>
    <string name="menu_gallery">Fournisseurs</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Partager</string>
    <string name="menu_send">Nous Contacter</string>
    <string name="Nomp"> Nom </string>
    <string name="Nomp1"> Nom</string>
    <string name="boutton"> Générales </string>
    <string name="stk_min"> Stock Sécurité</string>
    <string name="stk_max"> Stock Optimal</string>
    <string name="p_a"> Prix achat</string>
    <string name="p_v"> Prix vente</string>
    <string name="NumSerie"> Numero Série</string>
    <string name="NumS"> Entrer le code</string>
    <string name="mark"> Marque</string>
    <string name="att"> Attribut </string>
    <string name="a1"> Poids</string>
    <string name="a2"> Couleur</string>
    <string name="a3"> Taille</string>

    <string name="prenom"> Prénom </string>
    <string name="contact"> Contact </string>
    <string name="numfour"> Numéro fournisseur</string>
    <string name="emfour"> Email fournisseur</string>
    <string name="adr"> Adresse </string>
    <string name="rue"> Rue</string>
    <string name="ville"> Ville </string>
    <string name="pays"> Pays</string>


    <string name="caisse"> Votre solde est : </string>
    <string name="solde"> 00000000</string>
    <string name="benefice"> Bénéfice: </string>
    <string name="benefice1"> 0000000</string>
    <string name="URI_PHONE_PROTOCOLE_TEMPLATE">tel:%s</string>
    <string name="URI_MAIL_PROTOCOLE_TEMPLATE">mailto:%s</string>
    <string name="add_fournissuer_screen_title">Ajouter fournisseur</string>
    <string name="modify_fournisseur_screen_title">Modifier fournisseur</string>
    <string name="blank_phone_number_error">Vous devez saisir au moins un numéro de telephone ou un email</string>
    <string name="blank_name_error">Le nom est obligatoire</string>
    <string name="blank_first_name_error">Le prénom est obligatoire</string>
    <string name="blank_email_error">L\'email est obligatoire</string>
    <string name="blank_uom_error">L\'unité de mesure est obligatoire</string>
    <string name="blank_bought_price_error">Le prix d\'achat est obligatoire</string>
    <string name="malformed_bought_price_error">Le prix d\'achat n\'est pas un nombre valide</string>
    <string name="negative_number_error">Une valeur négative n\'est pas un pérmise</string>
    <string name="inferior_sale_price">Le prix de vente doit être supérieur au prix d\'achat </string>
    <string name="blank_selling_price_error">Le prix de vente est obligatoire</string>
    <string name="malformed_selling_price_error">Le prix de vente n\'est pas un nombre valide</string>
    <string name="blank_security_threshold_error">Le stock de sécurité est obligatoire</string>
    <string name="malformed_security_threshold_error">Le stock de sécurité n\'est pas un nombre valide</string>

    <string-array name="transaction_types">
        <item>Vente</item>
        <item>Réception</item>
    </string-array>
    <string name="title_activity_login">Inscription</string>
    <string name="prompt_email">Email ou identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Inscription ou enregistrement</string>
    <string name="action_sign_in_short">Inscription</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Email ou identifiant invalide</string>
    <string name="invalid_password">Le mot de passe doit avoir plus de 5 caractéres</string>
    <string name="login_failed">"Inscription échouée"</string>
</resources>
