<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_fournisseur">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_camera" />


    <TextView
        android:id="@+id/Nomp"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/Nomp"
        app:layout_constraintBottom_toBottomOf="@+id/Nomp1"
        app:layout_constraintEnd_toStartOf="@+id/Nomp1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Nomp1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Nomp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Nomp1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/p"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/prenom"
        app:layout_constraintBottom_toBottomOf="@+id/p1"
        app:layout_constraintEnd_toStartOf="@+id/p1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/p1" />

    <EditText
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nomp1" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="68dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintEnd_toStartOf="@+id/cont1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/cont1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/numfour"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="350dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emfour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont1" />

    <TextView
        android:id="@+id/adr"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="68dp"
        android:text="@string/adr"
        app:layout_constraintBottom_toTopOf="@+id/adr2"
        app:layout_constraintEnd_toStartOf="@+id/adr1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adr1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/adr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/rue"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="501dp" />

    <EditText
        android:id="@+id/adr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ville"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adr1" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/adr2"
        app:layout_constraintTop_toBottomOf="@+id/adr2" />


</androidx.constraintlayout.widget.ConstraintLayout>